--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reown/appkit": "^1.8.1",
+    "@reown/appkit-adapter-wagmi": "^1.8.1",
+    "@tanstack/react-query": "^5.85.5",
+    "@web3modal/wagmi": "^5.1.11",
     "apexcharts": "^5.3.4",
     "cryptocurrency-icons": "^0.18.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
