--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-ts-tradingview-widgets": "^1.2.8",
     "viem": "^2.36.0",
     "wagmi": "^2.16.8"
   },
