--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reown/appkit": "^1.8.1",
     "@reown/appkit-adapter-wagmi": "^1.8.1",
     "@tanstack/react-query": "^5.85.5",
+    "@uniswap/sdk-core": "^7.7.2",
+    "@uniswap/v2-sdk": "^4.15.2",
     "@web3modal/wagmi": "^5.1.11",
     "apexcharts": "^5.3.4",
     "cryptocurrency-icons": "^0.18.1",
