--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.11.0",
     "cryptocurrency-icons": "^0.18.1",
     "framer-motion": "^12.23.12",
+    "jsdom": "^26.1.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
