--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.5.0",
     "react-ts-tradingview-widgets": "^1.2.8",
     "viem": "^2.36.0",
-    "wagmi": "^2.16.8"
+    "wagmi": "^2.16.8",
+    "stripe": "^16.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
