--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/v2-sdk": "^4.15.2",
+    "@web3icons/react": "^4.0.22",
     "@web3modal/wagmi": "^5.1.11",
     "apexcharts": "^5.3.4",
     "axios": "^1.11.0",
@@ -27,9 +28,9 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-ts-tradingview-widgets": "^1.2.8",
+    "stripe": "^16.6.0",
     "viem": "^2.36.0",
-    "wagmi": "^2.16.8",
-    "stripe": "^16.6.0"
+    "wagmi": "^2.16.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
