--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:admin": "node scripts/seedAdmin.js"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -20,8 +21,11 @@
     "apexcharts": "^5.3.4",
     "axios": "^1.11.0",
     "cryptocurrency-icons": "^0.18.1",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
+    "jose": "^6.1.0",
     "jsdom": "^26.1.0",
+    "mongodb": "^6.19.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
