--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "seed:admin": "node scripts/seedAdmin.js"
+    "seed:admin": "node scripts/seedAdmin.js",
+    "seed:nyax": "node scripts/seedNyaxTokens.js"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
