--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@reown/appkit": "^1.8.1",
     "@reown/appkit-adapter-wagmi": "^1.8.1",
+    "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.85.5",
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/v2-sdk": "^4.15.2",
