--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-ts-tradingview-widgets": "^1.2.8",
     "stripe": "^16.6.0",
