--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@reown/appkit": "^1.8.1",
     "@reown/appkit-adapter-wagmi": "^1.8.1",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.85.5",
     "@uniswap/sdk-core": "^7.7.2",
@@ -22,6 +23,7 @@
     "@web3modal/wagmi": "^5.1.11",
     "apexcharts": "^5.3.4",
     "axios": "^1.11.0",
+    "bs58": "^6.0.0",
     "cryptocurrency-icons": "^0.18.1",
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
