--- a/env.example
+++ b/env.example
@@ -8,3 +8,11 @@ SOLANA_RPC_ENDPOINT=https://api.mainnet-beta.solana.com
 
 # Environment
 NODE_ENV=development
+
+# PayPal Configuration
+# Get these from https://developer.paypal.com/
+# For the React SDK, only the client ID needs to be public
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=your-paypal-client-id-here
+
+# Base URL for your application
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
