--- a/env.example
+++ b/env.example
@@ -14,5 +14,14 @@ NODE_ENV=development
 # For the React SDK, only the client ID needs to be public
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=your-paypal-client-id-here
 
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url_here
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# Twitch API Configuration
+NEXT_PUBLIC_TWITCH_CLIENT_ID=your_twitch_client_id_here
+TWITCH_CLIENT_SECRET=your_twitch_client_secret_here
+NEXT_PUBLIC_TWITCH_REDIRECT_URI=http://localhost:3000/auth/twitch/callback
+
 # Base URL for your application
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
