--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.9.1",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@reduxjs/toolkit": "^2.9.0",
     "@reown/appkit": "^1.8.1",
     "@reown/appkit-adapter-wagmi": "^1.8.1",
     "@solana/web3.js": "^1.98.4",
@@ -37,6 +38,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-ts-tradingview-widgets": "^1.2.8",
     "stripe": "^16.6.0",
     "viem": "^2.36.0",
