--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.85.5",
+    "@types/uuid": "^10.0.0",
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/v2-sdk": "^4.15.2",
     "@web3icons/react": "^4.0.22",
@@ -40,7 +41,11 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-ts-tradingview-widgets": "^1.2.8",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^16.6.0",
+    "uuid": "^13.0.0",
     "viem": "^2.36.0",
     "wagmi": "^2.16.8"
   },
@@ -50,6 +55,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/simple-peer": "^9.11.8",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
