--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@reown/appkit": "^1.8.1",
     "@reown/appkit-adapter-wagmi": "^1.8.1",
     "@solana/web3.js": "^1.98.4",
+    "@stream-io/video-client": "^1.32.0",
+    "@stream-io/video-react-sdk": "^1.22.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.85.5",
     "@types/uuid": "^10.0.0",
