--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "stream-chat": "^9.20.1",
     "stripe": "^16.6.0",
     "uuid": "^13.0.0",
     "viem": "^2.36.0",
