--- a/env.example
+++ b/env.example
@@ -25,3 +25,19 @@ NEXT_PUBLIC_TWITCH_REDIRECT_URI=http://localhost:3000/auth/twitch/callback
 
 # Base URL for your application
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Email Configuration (Nodemailer)
+# SMTP settings for sending emails
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password-here
+
+# Email addresses
+FROM_EMAIL=noreply@nyaltx.io
+ADMIN_EMAIL=admin@nyaltx.io
+
+# For Gmail, you need to:
+# 1. Enable 2-factor authentication
+# 2. Generate an "App Password" (not your regular password)
+# 3. Use the app password in SMTP_PASS
