--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stream-io/video-react-sdk": "^1.22.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.85.5",
+    "@types/nodemailer": "^7.0.2",
     "@types/uuid": "^10.0.0",
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/v2-sdk": "^4.15.2",
@@ -36,6 +37,7 @@
     "jsdom": "^26.1.0",
     "mongodb": "^6.19.0",
     "next": "15.5.2",
+    "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
