--- a/env.example
+++ b/env.example
@@ -41,3 +41,9 @@ ADMIN_EMAIL=admin@nyaltx.io
 # 1. Enable 2-factor authentication
 # 2. Generate an "App Password" (not your regular password)
 # 3. Use the app password in SMTP_PASS
+
+# Crypto Payment Configuration (Mainnet Ethereum)
+NEXT_PUBLIC_PAYMENT_CHAIN_ID=1
+NEXT_PUBLIC_PAYMENT_RECEIVER_ADDRESS=0x81bA7b98E49014Bff22F811E9405640bC2B39cC0
+NEXT_PUBLIC_NYAX_TOKEN_ADDRESS=0x5eed5621b92be4473f99bacac77acfa27deb57d9
+NEXT_PUBLIC_FALLBACK_ETH_PRICE=3000
